Fixes hamburger menu display on small screens
I missed some badly resolved merge confilcts.

--- a/src/components/Navigation.module.css
+++ b/src/components/Navigation.module.css
@@ -129,13 +129,8 @@
       grid-template:
          'menu'
          'icons'
-         'menu'
-         'icons'
          'hamburger-icon'
          / 1fr;
-      place-items: center;
-      place-content: center;
-      padding: 0.1em;
       place-items: center;
       place-content: center;
       padding: 0.1em;
@@ -169,23 +164,7 @@
       width: 2em;
       height: 2em;
    }
-   .menuButtonContainer {
-      display: inline-block;
-      position: relative;
-      width: 2em;
-      height: 2em;
-   }
 
-   .menuButton,
-   .menuButton::before,
-   .menuButton::after {
-      display: block;
-      position: absolute;
-      background-color: black;
-      height: 5px;
-      width: 35px;
-      transition: transform 400ms cubic-bezier(0.23, 1, 0.32, 1);
-   }
    .menuButton,
    .menuButton::before,
    .menuButton::after {
@@ -200,14 +179,7 @@
    .menuButton {
       top: calc(50% - 2.5px);
    }
-   .menuButton {
-      top: calc(50% - 2.5px);
-   }
 
-   .menuButton::before {
-      content: '';
-      margin-top: -10px;
-   }
    .menuButton::before {
       content: '';
       margin-top: -10px;
@@ -217,15 +189,7 @@
       content: '';
       margin-top: 10px;
    }
-   .menuButton::after {
-      content: '';
-      margin-top: 10px;
-   }
 
-   #menuToggle:checked + .menuButtonContainer .menuButton::before {
-      margin-top: 0;
-      transform: rotate(45deg);
-   }
    #menuToggle:checked + .menuButtonContainer .menuButton::before {
       margin-top: 0;
       transform: rotate(45deg);
@@ -234,22 +198,12 @@
    #menuToggle:checked + .menuButtonContainer .menuButton {
       background: rgba(255, 255, 255, 0);
    }
-   #menuToggle:checked + .menuButtonContainer .menuButton {
-      background: rgba(255, 255, 255, 0);
-   }
 
    #menuToggle:checked + .menuButtonContainer .menuButton::after {
       margin-top: 0;
       transform: rotate(-45deg);
    }
-   #menuToggle:checked + .menuButtonContainer .menuButton::after {
-      margin-top: 0;
-      transform: rotate(-45deg);
-   }
 
-   #menuToggle:checked ~ .hamburgerMenu {
-      display: grid;
-   }
    #menuToggle:checked ~ .hamburgerMenu {
       display: grid;
    }
